--- a/styles/avaliacao.css
+++ b/styles/avaliacao.css
@@ -5,11 +5,19 @@
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
-   
+
 }
 
-h2,p{
+h2 {
+    font-size: 25pt;
     margin-left: 30px;
+}
+
+p {
+    margin-top: -20px;
+    margin-left: 30px;
+    font-size: 15pt;
+    color: #9e9e9e;
 }
 
 .form-group {
@@ -19,7 +27,7 @@ h2,p{
 
 .divisor {
     width: 100%;
-    border-bottom: 1px solid #0000002a;
+    border-bottom: 1px solid #afafaf4a;
 }
 
 .form-group label {
@@ -78,12 +86,27 @@ h2,p{
 
 /* Estilos para posicionar o iframe */
 #iframe {
+    display: none;
     position: absolute;
-    top: 150px; /* Ajuste conforme necessário */
-    right: 100px; /* Ajuste conforme necessário */
+    top: 150px;
+    right: 150px;
     width: 500px;
     height: 680px;
-    border: 1px solid #000;
+    background-color: #F3FFF1;
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.507);
+    border-radius: 24px;
+    border: 1px solid rgb(255, 255, 255);
     padding: 0px;
-    
+
+}
+
+/* Estilos para a mensagem de carregamento */
+
+#loading {
+    display: none;
+    /* Esconde o texto de carregamento inicialmente */
+    text-align: center;
+    font-size: 20px;
+    color: #555;
+    margin-top: -500px;
 }
