--- a/styles/paciente.css
+++ b/styles/paciente.css
@@ -1,7 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+* {
+    font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
-    padding: 20px;
+}
+
+
+h2 {
+    font-size: 25pt;
+    margin-left: 30px;
+}
+
+p {
+    margin-top: -20px;
+    margin-left: 30px;
+    font-size: 15pt;
+    color: #9e9e9e;
+}
+
+.divisor {
+    width: 100%;
+    border-bottom: 1px solid #afafaf4a;
+
 }
 
 h1 {
