--- a/styles/redefinir.css
+++ b/styles/redefinir.css
@@ -1,17 +1,7 @@
-body {
+.redefinir-senha-pagina {
     font-family: Arial, sans-serif;
     margin: 0;
-    padding: 0;
-    background-color: #F5F5F5;
-}
-
-
-
-
-.verificacao-pagina {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    top: -50px;
+    top:-50px;
     padding: 0;
     background-image: url('../assets/bg.png');
     background-size: 100%;
@@ -24,22 +14,22 @@ body {
     position: relative;
 }
 
-.verificacao-pagina .container {
+.redefinir-senha-pagina .container {
     text-align: center;
-    border-radius: 10px;    
-     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.466);
-
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.466);
 }
 
-.verificacao-pagina .login-box {
+.redefinir-senha-pagina .login-box {
     background-color: #FFFFFF;
     padding: 40px;
     border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     width: 320px;
     position: relative;
 }
 
-.verificacao-pagina .back-arrow {
+.redefinir-senha-pagina .back-arrow {
     position: absolute;
     top: 20px;
     left: 20px;
@@ -48,42 +38,46 @@ body {
     text-decoration: none;
 }
 
-.verificacao-pagina .logo {
-    width: 320px;
+.redefinir-senha-pagina .logo {
+    width: 150px;
     margin-bottom: 20px;
 }
 
-.verificacao-pagina h2 {
+.redefinir-senha-pagina h2 {
     color: #000000;
     margin-bottom: 10px;
     font-size: 24px;
 }
 
-.verificacao-pagina p {
+.redefinir-senha-pagina p {
     color: #666666;
     margin-bottom: 30px;
     font-size: 14px;
 }
 
-.verificacao-pagina .input-group {
+.redefinir-senha-pagina .input-group {
     margin-bottom: 20px;
-    display: flex;
-    justify-content: space-between;
+    text-align: left;
 }
 
-.verificacao-pagina .input-group input {
-    width: 48px;
-    height: 48px;
-    padding: 0;
-    text-align: center;
-    border: 1px solid #00000038;
+.redefinir-senha-pagina .input-group label {
+    display: block;
+    color: #666666;
+    margin-bottom: 5px;
+    font-size: 14px;
+}
+
+.redefinir-senha-pagina .password-input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #666666;
     border-radius: 5px;
-    
-    font-size: 24px;
-    background-color: #DDDDDD; /* Cor de fundo cinza */
+    font-size: 14px;
+    box-sizing: border-box;
+    color: #000;
 }
 
-.verificacao-pagina button {
+.redefinir-senha-pagina button {
     width: 100%;
     padding: 12px;
     background-color: #003B1B;
@@ -95,6 +89,6 @@ body {
     margin-top: 20px;
 }
 
-.verificacao-pagina button:hover {
+.redefinir-senha-pagina button:hover {
     background-color: #005326;
 }
