--- a/styles/evolucao.css
+++ b/styles/evolucao.css
@@ -1,3 +1,68 @@
-*{
-    background-color: aqua;
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+* {
+    font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+}
+
+h2 {
+    font-size: 25pt;
+    margin-left: 30px;
+}
+
+p {
+    margin-top: -20px;
+    margin-left: 30px;
+    font-size: 15pt;
+    color: #9e9e9e;
+}
+
+.divisor {
+    width: 100%;
+    border-bottom: 1px solid #afafaf4a;
+}
+
+
+.form-group {
+    margin-top: 30px;
+    margin-bottom: 90px;
+    margin-left: 30px;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #000000;
+    font-size: 14px;
+}
+
+.form-group input {
+    width: 500px;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid #E5D5D5;
+    border-radius: 10px;
+    box-shadow: 0px 3px rgba(0, 0, 0, 0.281);
+    font-size: 14px;
+    color: #000000;
+}
+
+.btn {
+    width: 130px;
+    height: 45px;
+    padding: 12px;
+    background-color: #003B1B;
+    border: none;
+    border-radius: 16px;
+    color: white;
+    font-size: 16px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #005326;
 }
