--- a/styles/cadastr.css
+++ b/styles/cadastr.css
@@ -7,6 +7,12 @@
     font-style: normal;
 }
 
+html,
+body {
+    margin: 0;
+    padding-bottom: 10px;
+}
+
 h2 {
     font-size: 25pt;
     margin-left: 30px;
@@ -19,16 +25,16 @@ p {
     color: #9e9e9e;
 }
 
-.divisor {
-    width: 100%;
-    border-bottom: 1px solid #afafaf4a;
-}
-
-
 .form-group {
     margin-top: 30px;
     margin-bottom: 90px;
     margin-left: 30px;
+}
+
+.divisor {
+    width: 100%;
+    border-bottom: 1px solid #afafaf4a;
+
 }
 
 .form-group label {
@@ -45,14 +51,16 @@ p {
     box-sizing: border-box;
     border: 1px solid #E5D5D5;
     border-radius: 10px;
-    box-shadow: 0px 3px rgba(0, 0, 0, 0.281);
+    box-shadow: 0px 3px rgba(0, 0, 0, 0.127);
     font-size: 14px;
     color: #000000;
 }
 
+
 .btn {
+
     width: 130px;
-    height: 45px;
+    height: 50px;
     padding: 12px;
     background-color: #003B1B;
     border: none;
@@ -61,8 +69,39 @@ p {
     font-size: 16px;
     text-align: center;
     cursor: pointer;
+    margin-top: 8%;
+    margin-left: 85%;
 }
 
 .btn:hover {
     background-color: #005326;
+}
+
+.resultado {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #003B1B;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.368);
+    z-index: 1000;
+    max-width: 80%;
+    text-align: center;
+}
+
+.close-button {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+    color: #003B1B;
+    font-weight: bold;
 }
