--- a/styles/evoluca.css
+++ b/styles/evoluca.css
@@ -7,6 +7,12 @@
     font-style: normal;
 }
 
+html,
+body {
+    margin: 0;
+    padding-bottom: 10px;
+}
+
 h2 {
     font-size: 25pt;
     margin-left: 30px;
@@ -23,6 +29,7 @@ p {
     width: 100%;
     border-bottom: 1px solid #afafaf4a;
 }
+
 
 .form-group {
     margin-top: 30px;
@@ -44,7 +51,7 @@ p {
     box-sizing: border-box;
     border: 1px solid #E5D5D5;
     border-radius: 10px;
-    box-shadow: 0px 3px rgba(0, 0, 0, 0.281);
+    box-shadow: 0px 3px rgba(0, 0, 0, 0.127);
     font-size: 14px;
     color: #000000;
 }
