--- a/styles/evolucao.css
+++ b/styles/evolucao.css
@@ -3,32 +3,30 @@
 * {
     font-family: "Nunito", sans-serif;
     font-optical-sizing: auto;
-    font-weight: normal;
-    /* Removido 'weight' para 'normal' */
+    font-weight: weight;
     font-style: normal;
 }
 
 html,
 body {
-    margin: 0;
-    padding-bottom: 10px;
+    padding: 20px;
     background-color: #f4f7f8;
     /* Cor de fundo leve */
 }
 
 .main-content-evolucao {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #ffffff;
+    background: #fff;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    max-width: 100%;
+    margin: auto;
 }
 
 h2 {
     font-size: 25pt;
     margin-left: 30px;
-    color: #003B1B;
+    color: #000000;
     /* Cor de destaque para títulos */
 }
 
@@ -93,6 +91,43 @@ p {
 
 .btn:hover {
     background-color: #005326;
+}
+
+.btn-salvar {
+    width: 130px;
+    height: 45px;
+    padding: 12px;
+    margin-top: 70px;
+    margin-left: 90%;
+    background-color: #003B1B;
+    border: none;
+    border-radius: 16px;
+    color: white;
+    font-size: 16px;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.btn-salvar:hover {
+    background-color: #005326;
+}
+
+.resultado {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #003B1B;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.368);
+    z-index: 1000;
+    max-width: 80%;
+    text-align: center;
 }
 
 /* Estilos para a tabela */
