--- a/styles/pagament.css
+++ b/styles/pagament.css
@@ -19,12 +19,13 @@ body {
 }
 
 .container {
+    margin-top: -220px;
     width: 100%;
     max-width: 450px;
     padding: 20px;
     border-radius: 8px;
     background-color: #ffffff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 10px 4px 10px rgba(0, 0, 0, 0.451);
 }
 
 h2 {
